--- a/.github/workflows/quality-control.yml
+++ b/.github/workflows/quality-control.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "20"
 
       - name: Install
         run: npm install
@@ -37,7 +37,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x, 20.x]
 
     steps:
       - uses: actions/checkout@v3
@@ -51,4 +51,4 @@ jobs:
         run: npm install
 
       - name: AVA Tests
-        run: npx ava
+        run: npm run test
