--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"access": "public"
 	},
 	"engines": {
-		"node": ">=16.15.1 || >=18.4.0"
+		"node": "18.x || 20.x"
 	},
 	"keywords": [
 		"epub",
@@ -36,7 +36,7 @@
 		"lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
 		"format": "prettier --write .",
 		"build": "tsc",
-		"test": "ava"
+		"test": "NODE_OPTIONS='--loader=ts-node/esm' ava"
 	},
 	"dependencies": {
 		"archiver": "^5.3.1",
@@ -53,22 +53,22 @@
 		"uslug": "^1.0.4"
 	},
 	"devDependencies": {
-		"@tsconfig/node16": "^1.0.4",
+		"@tsconfig/node18": "^2.0.1",
 		"@types/archiver": "^5.3.2",
 		"@types/diacritics": "^1.3.1",
 		"@types/ejs": "^3.1.2",
 		"@types/fs-extra": "^11.0.1",
 		"@types/mime": "^3.0.1",
-		"@types/node": "^18.16.16",
+		"@types/node": "^20.2.5",
 		"@types/uslug": "^1.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.59.7",
-		"@typescript-eslint/parser": "^5.59.7",
+		"@typescript-eslint/eslint-plugin": "^5.59.9",
+		"@typescript-eslint/parser": "^5.59.9",
 		"ava": "^5.3.0",
-		"eslint": "^8.41.0",
+		"eslint": "^8.42.0",
 		"eslint-config-prettier": "^8.8.0",
 		"prettier": "^2.8.8",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.0.4"
+		"typescript": "^5.1.3"
 	},
 	"ava": {
 		"extensions": {
@@ -78,5 +78,5 @@
 			"--loader=ts-node/esm"
 		]
 	},
-	"packageManager": "yarn@3.5.1"
+	"packageManager": "yarn@3.6.0"
 }
