--- a/.github/workflows/quality-control.yml
+++ b/.github/workflows/quality-control.yml
@@ -37,7 +37,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [18.x, 20.x]
 
     steps:
       - uses: actions/checkout@v3
@@ -50,5 +50,7 @@ jobs:
       - name: Install
         run: npm install
 
-      - name: AVA Tests
-        run: npm run test
+      - name: Run tests
+        env:
+          NODE_OPTIONS: --loader=ts-node/esm
+        run: npx mocha
