--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
 		"format": "prettier --write .",
 		"build": "tsc",
-		"test": "NODE_OPTIONS='--loader=ts-node/esm' mocha"
+		"test": "cross-env NODE_OPTIONS='--loader=ts-node/esm' mocha"
 	},
 	"dependencies": {
 		"archiver": "^6.0.1",
@@ -45,6 +45,7 @@
 		"ejs": "^3.1.9",
 		"entities": "^4.5.0",
 		"fs-extra": "^11.1.1",
+		"image-size": "^1.0.2",
 		"mime": "^3.0.0",
 		"rehype-parse": "^9.0.0",
 		"rehype-stringify": "^10.0.0",
@@ -64,6 +65,7 @@
 		"@types/uslug": "^1.0.3",
 		"@typescript-eslint/eslint-plugin": "^6.9.1",
 		"@typescript-eslint/parser": "^6.9.1",
+		"cross-env": "^7.0.3",
 		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^9.0.0",
 		"mocha": "^10.2.0",
