--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"access": "public"
 	},
 	"engines": {
-		"node": "18.x || 20.x"
+		"node": "20.x || 22.x"
 	},
 	"keywords": [
 		"epub",
@@ -30,17 +30,17 @@
 	],
 	"scripts": {
 		"freshlock": "rm -rf node_modules/ && rm .yarn/install-state.gz && rm yarn.lock && yarn",
-		"check-lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"check-lint": "eslint",
 		"check-format": "prettier --check .",
 		"check-tsc": "tsc --noEmit",
-		"lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
+		"lint": "eslint --fix",
 		"format": "prettier --write .",
 		"build": "tsc",
 		"test": "cross-env NODE_OPTIONS='--loader=ts-node/esm' mocha"
 	},
 	"dependencies": {
 		"archiver": "^7.0.1",
-		"axios": "^1.6.8",
+		"axios": "^1.7.2",
 		"diacritics": "^1.3.0",
 		"ejs": "^3.1.10",
 		"entities": "^4.5.0",
@@ -54,31 +54,24 @@
 		"uslug": "^1.0.4"
 	},
 	"devDependencies": {
-		"@tsconfig/node18": "^18.2.4",
+		"@eslint/js": "^9.4.0",
+		"@tsconfig/node20": "^20.1.4",
 		"@types/archiver": "^6.0.2",
 		"@types/diacritics": "^1.3.3",
 		"@types/ejs": "^3.1.5",
 		"@types/fs-extra": "^11.0.4",
 		"@types/mocha": "^10.0.6",
-		"@types/node": "^20.12.12",
+		"@types/node": "^20.14.2",
 		"@types/uslug": "^1.0.4",
-		"@typescript-eslint/eslint-plugin": "^7.9.0",
-		"@typescript-eslint/parser": "^7.9.0",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.57.0",
+		"eslint": "^9.4.0",
 		"eslint-config-prettier": "^9.1.0",
+		"globals": "^15.4.0",
 		"mocha": "^10.4.0",
-		"prettier": "^3.2.5",
+		"prettier": "^3.3.2",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^8.0.0-alpha.30"
 	},
-	"ava": {
-		"extensions": {
-			"ts": "module"
-		},
-		"nodeArguments": [
-			"--loader=ts-node/esm"
-		]
-	},
-	"packageManager": "yarn@4.2.2"
+	"packageManager": "yarn@4.3.0"
 }
