--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,10 @@ insert_final_newline = false
 indent_style = space
 indent_size = 2
 
+[*.ejs]
+indent_style = space
+indent_size = 4
+
 [*.{js,ts,cjs,mjs}]
 indent_style = space
 indent_size = 2
