--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
 		"archiver": "^7.0.1",
 		"axios": "^1.9.0",
 		"diacritics": "^1.3.0",
-		"ejs": "^3.1.10",
 		"entities": "^6.0.0",
 		"fs-extra": "^11.3.0",
 		"image-size": "^2.0.2",
+		"jimp": "^1.6.0",
+		"littlezipper": "^0.1.5",
 		"mime": "^4.0.7",
+		"mustache": "^4.2.0",
 		"rehype-parse": "^9.0.1",
 		"rehype-stringify": "^10.0.1",
 		"unified": "^11.0.5",
@@ -55,12 +57,13 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.1",
+		"@resvg/resvg-wasm": "^2.6.2",
 		"@tsconfig/node20": "^20.1.5",
 		"@types/archiver": "^6.0.3",
 		"@types/diacritics": "^1.3.3",
-		"@types/ejs": "^3.1.5",
 		"@types/fs-extra": "^11.0.4",
 		"@types/mocha": "^10.0.10",
+		"@types/mustache": "^4",
 		"@types/node": "^22.15.2",
 		"@types/uslug": "^1.0.4",
 		"cross-env": "^7.0.3",
